úspěchy malých vydavatelů

--- a/902 cesta písničky do éteru.ipynb
+++ b/902 cesta písničky do éteru.ipynb
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c10b5b8",
+   "id": "8383066a",
    "metadata": {},
    "source": [
     "## Vydavatelství"
@@ -1208,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6cd5470a",
+   "id": "64f8106b",
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6978bbe9",
+   "id": "d13fe231",
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fb383469",
+   "id": "eb3c6e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "d27d4b9a",
+   "id": "6fb9a3f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1448,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "a6b7bb08",
+   "id": "535f6bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "6701066c",
+   "id": "114a1e96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "83a4d763",
+   "id": "1fdabdad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "231905e7",
+   "id": "86f1fdc6",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ed4a18be",
+   "id": "d019a2eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1520,7 +1520,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9b6f4c39",
+   "id": "e4f881b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1535,7 +1535,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1e38ab21",
+   "id": "8f59eac9",
    "metadata": {},
    "outputs": [
     {
@@ -1551,13 +1551,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82b848c1",
+   "cell_type": "markdown",
+   "id": "53ff94a1",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "graf(carovy=pozoruhodne_g, target=\"pozoruhodne_pisne\", titulek='Hitparádové trajektorie vybraných písní', podtitulek=f'''Srovnání dvou nejrychlejších hitparádových jedniček (Forget Me, Katchi), tří nejpomalejších jedniček (Vánoce na míru, For You, Échame la culpa) a tří písní, které se v top 100 držely nejdéle (Srdce nehasnou, Když nemůžeš, tak přidej, Motýli).''', kredity=[\"Zdroj dat: ifpicr.cz | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], prvni=True, osay=' ', osay2=' ', skladany=False, naopak=False, vzhurunohama=True, osaymin=1, osaymax=100)"
+    "### Největší úspěchy malých: týdny na vrcholu hitparády"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "42364c0d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vydavatel         interpret_hlavni  track                                   \n",
+       "I.Richmond.P.     Kryštof           Ty a já                                     9\n",
+       "                                    Srdcebeat                                   6\n",
+       "                                    Zůstaň tu se mnou (Za sny)                  5\n",
+       "Richrec           Kryštof           Inzerát                                     5\n",
+       "Um                Kryštof           Inzerát                                     5\n",
+       "I.Richmond.P.     Kryštof           Hvězdáři (feat. Sima Martausová)            3\n",
+       "Marek Ztracený    Marek Ztracený    Originál                                    3\n",
+       "Ewolution         Ewa Farna         Vánoce na míru                              2\n",
+       "I.Richmond.P.     Kryštof           Hned teď (pojď být světlometem)             2\n",
+       "Vivienne Records  Mikolas Josef     Acapella (feat. Fito Blanko & Frankie J)    2\n",
+       "Chm               Xindl X           Láska v housce                              1\n",
+       "I.Richmond.P.     Kryštof           Vánoční                                     1\n",
+       "Onairmusic        Nightwork         Čekám na signál                             1\n",
+       "Parlophone        Xindl X           Láska v housce                              1\n",
+       "Name: week, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vydavatelstvo[(vydavatelstvo['pozice'] == 1) & (~vydavatelstvo['vydavatel'].isin(top_vydavatele))].groupby(['vydavatel','interpret_hlavni','track'])['week'].nunique().nlargest(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff1a4b01",
+   "metadata": {},
+   "source": [
+    "### Největší úspěchy malých: písní v top 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f9c05439",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "vydavatel\n",
+       "Singlton                44\n",
+       "Championship Music      29\n",
+       "I.Richmond.P.           14\n",
+       "Rgme                    12\n",
+       "Tr                       9\n",
+       "Kontor Records           8\n",
+       "Vis-A-Vis Prod.          8\n",
+       "Lewron Music Center      7\n",
+       "Olga Lounová Records     7\n",
+       "Pm                       7\n",
+       "Hfr                      6\n",
+       "Marek Ztracený           6\n",
+       "Um                       6\n",
+       "Armada                   5\n",
+       "Onairmusic               5\n",
+       "Pink Panther             5\n",
+       "The Silver Spoons        5\n",
+       "Tomáš Klus               5\n",
+       "Ty Nikdy                 5\n",
+       "Wisemusic                5\n",
+       "Name: track, dtype: int64"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vydavatelstvo[(~vydavatelstvo['vydavatel'].isin(top_vydavatele))].groupby(['vydavatel'])['track'].nunique().nlargest(20)"
    ]
   }
  ],
