oprava dvou blbě označených týdnů + přepočty

--- a/904 demografie.ipynb
+++ b/904 demografie.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "cc45331c",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "31ea2490",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "529e619b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "b002b290",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "e78bcd8e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "01707134",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        " 2023]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "de10b620",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "0c37d2d6",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "91110     Lil Uzi Vert    nebinární"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "5d602f0e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "f171210a",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "6c5140b9",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "53bb8dde",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
+   "id": "09c19b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['vek'] = df['rok'] - df['datum_narozeni']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "cf57c2db",
    "metadata": {},
    "outputs": [
@@ -259,7 +269,7 @@
        "27.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "031c826b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "29.101907157078486"
+       "29.10379335638688"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "2ace231a",
    "metadata": {},
    "outputs": [
@@ -301,7 +311,7 @@
        "31.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,17 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "de00fc7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.245962324984326"
+       "33.24849986565961"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,17 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7914304c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['vek'] = df['rok'] - df['datum_narozeni']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "6ed35a62",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "id": "a89292e8",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "8ab6ff14",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "5953d83e",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "280af0f3",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "cdb88715",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "Name: track, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "807df4ae",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "Name: week, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,17 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "50ead1cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Ženy, které strávily nejvíce týdnů na vrcholu české hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů jako #1</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Adele</td><td>24</td></tr><tr><td>2.</td><td>Nelly Furtado</td><td>24</td></tr><tr><td>3.</td><td>P!Nk</td><td>23</td></tr><tr><td>4.</td><td>Shakira</td><td>16</td></tr><tr><td>5.</td><td>Ava Max</td><td>12</td></tr><tr><td>6.</td><td>Katy Perry</td><td>12</td></tr><tr><td>7.</td><td>Alesha Dixon</td><td>11</td></tr><tr><td>8.</td><td>Rihanna</td><td>10</td></tr><tr><td>9.</td><td>Carly Rae Jepsen</td><td>8</td></tr><tr><td>10.</td><td>Lady Gaga</td><td>8</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=\"100%\">Z Češek se to od ledna 2006 do listopadu 2023 podařilo pouze Lenny (4 týdny), Ewě Farne (2 týdny) a Heleně Zeťové (1 týden).</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Ženy, které strávily nejvíce týdnů na vrcholu české hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů jako #1</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Adele</td><td>24</td></tr><tr><td>2.</td><td>Nelly Furtado</td><td>24</td></tr><tr><td>3.</td><td>P!Nk</td><td>23</td></tr><tr><td>4.</td><td>Shakira</td><td>16</td></tr><tr><td>5.</td><td>Ava Max</td><td>12</td></tr><tr><td>6.</td><td>Katy Perry</td><td>12</td></tr><tr><td>7.</td><td>Alesha Dixon</td><td>11</td></tr><tr><td>8.</td><td>Rihanna</td><td>10</td></tr><tr><td>9.</td><td>Carly Rae Jepsen</td><td>8</td></tr><tr><td>10.</td><td>Lady Gaga</td><td>8</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Z Češek se to od ledna 2006 do listopadu 2023 podařilo pouze Lenny (4 týdny), Ewě Farne (2 týdny) a Heleně Zeťové (1 týden).</td></tr></tfoot></table>'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "id": "8f1824c9",
    "metadata": {},
    "outputs": [],
@@ -505,17 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "68c4db57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Češky, které se v top 100 držely nejvíce týdnů</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Anna K.</td><td>386</td></tr><tr><td>2.</td><td>Ewa Farna</td><td>303</td></tr><tr><td>3.</td><td>Lenny</td><td>284</td></tr><tr><td>4.</td><td>Lucie Vondráčková</td><td>228</td></tr><tr><td>5.</td><td>Lucie Bílá</td><td>220</td></tr><tr><td>6.</td><td>Aneta Langerová</td><td>197</td></tr><tr><td>7.</td><td>Olga Lounová</td><td>196</td></tr><tr><td>8.</td><td>Tereza Kerndlová</td><td>139</td></tr><tr><td>9.</td><td>Helena Zeťová</td><td>107</td></tr><tr><td>10.</td><td>Lenka Filipová</td><td>104</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=\"100%\">Data od ledna 2006 do listopadu 2023.</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Češky, které se v top 100 držely nejvíce týdnů</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Anna K.</td><td>387</td></tr><tr><td>2.</td><td>Ewa Farna</td><td>303</td></tr><tr><td>3.</td><td>Lenny</td><td>285</td></tr><tr><td>4.</td><td>Lucie Vondráčková</td><td>228</td></tr><tr><td>5.</td><td>Lucie Bílá</td><td>221</td></tr><tr><td>6.</td><td>Aneta Langerová</td><td>197</td></tr><tr><td>7.</td><td>Olga Lounová</td><td>196</td></tr><tr><td>8.</td><td>Tereza Kerndlová</td><td>139</td></tr><tr><td>9.</td><td>Helena Zeťová</td><td>107</td></tr><tr><td>10.</td><td>Lenka Filipová</td><td>104</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data od ledna 2006 do listopadu 2023.</td></tr></tfoot></table>'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
