--- a/905 závěrečný díl seriálu.ipynb
+++ b/905 závěrečný díl seriálu.ipynb
@@ -32,6 +32,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "5674b903",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydenni.csv\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "705803fe",
    "metadata": {},
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "526e0cd7",
    "metadata": {},
    "outputs": [],
@@ -51,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "13f3cc5f",
    "metadata": {},
    "outputs": [],
@@ -64,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8752433b",
    "metadata": {},
    "outputs": [],
@@ -77,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "828c6117",
    "metadata": {},
    "outputs": [],
@@ -87,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "0fb9c374",
    "metadata": {},
    "outputs": [],
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "be1b3824",
    "metadata": {},
    "outputs": [
@@ -167,7 +177,7 @@
        "4        Jelen                     2020-43"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "6449cde7",
    "metadata": {},
    "outputs": [
@@ -188,7 +198,7 @@
        "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Nejdelší aktuální hitparádové šňůry</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\">Interpreti</th><th class=\"text-nowrap\">Poslední týden mimo top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>Chinaski</td><td>2016-52</td></tr><tr><td>Mirai</td><td>2017-04</td></tr><tr><td>Kryštof</td><td>2017-21</td></tr><tr><td>Miley Cyrus</td><td>2020-39</td></tr><tr><td>Jelen</td><td>2020-43</td></tr></tbody></table>'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
