--- a/119 délky.ipynb
+++ b/119 délky.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "b649d9b2",
+   "id": "16a0b1f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "1c441fe8",
+   "id": "a6ea66a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "a4e3a5b3",
+   "id": "dafc9bc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "6eb70f4a",
+   "id": "26fc8baf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f6e42825",
+   "id": "a07c9962",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "id": "88a2290e",
+   "id": "3cc138e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "8996a35e",
+   "id": "d0328cb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "2b836913",
+   "id": "e7c4b8a8",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "51c5ae8f",
+   "id": "d18da598",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "615f3eb9",
+   "id": "6498e689",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "459b13ac",
+   "id": "c081f73a",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fc20112b",
+   "id": "6689c554",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "2b62bd7d",
+   "id": "961b727e",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "fbd5e971",
+   "id": "87565a25",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "3c4d0dab",
+   "id": "b217dc10",
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "daee9d51",
+   "id": "5a40e605",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "0031d651",
+   "id": "1b6f4788",
    "metadata": {},
    "outputs": [
     {
@@ -978,9 +978,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "746c022f",
+   "execution_count": 131,
+   "id": "4ae8bb73",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3:30'"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cas(df[df['rok']>=2014]['delka'].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "4f3776a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5:02'"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cas(df[df['rok']>=2014]['delka'].quantile(0.97))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "cf2ce2f6",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1000,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "56ae1cb9",
+   "id": "eb67cfef",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "435eb1dd",
+   "id": "b87d3a05",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "91a55159",
+   "id": "1a49620f",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1115,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "787d9e5f",
+   "id": "63052db9",
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "24585993",
+   "id": "442db5ce",
    "metadata": {},
    "outputs": [
     {
@@ -1113,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "6e4bed49",
+   "id": "a69065a2",
    "metadata": {},
    "outputs": [
     {
