--- a/904 demografie.ipynb
+++ b/904 demografie.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "cc45331c",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "31ea2490",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "529e619b",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "b002b290",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "e78bcd8e",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "01707134",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        " 2023]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "de10b620",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "0c37d2d6",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "91110     Lil Uzi Vert    nebinární"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "5d602f0e",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "f171210a",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "6c5140b9",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "53bb8dde",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "09c19b82",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "cf57c2db",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "27.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "031c826b",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "29.10379335638688"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "2ace231a",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "31.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "id": "de00fc7b",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
        "33.24849986565961"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "id": "6ed35a62",
    "metadata": {},
    "outputs": [],
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "a89292e8",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "8ab6ff14",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "id": "5953d83e",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "id": "280af0f3",
    "metadata": {},
    "outputs": [],
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 23,
    "id": "cdb88715",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "Name: track, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "id": "807df4ae",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "Name: week, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,17 +474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "id": "50ead1cb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Ženy, které strávily nejvíce týdnů na vrcholu české hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů jako #1</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Adele</td><td>24</td></tr><tr><td>2.</td><td>Nelly Furtado</td><td>24</td></tr><tr><td>3.</td><td>P!Nk</td><td>23</td></tr><tr><td>4.</td><td>Shakira</td><td>16</td></tr><tr><td>5.</td><td>Ava Max</td><td>12</td></tr><tr><td>6.</td><td>Katy Perry</td><td>12</td></tr><tr><td>7.</td><td>Alesha Dixon</td><td>11</td></tr><tr><td>8.</td><td>Rihanna</td><td>10</td></tr><tr><td>9.</td><td>Carly Rae Jepsen</td><td>8</td></tr><tr><td>10.</td><td>Lady Gaga</td><td>8</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Z Češek se to od ledna 2006 do listopadu 2023 podařilo pouze Lenny (4 týdny), Ewě Farne (2 týdny) a Heleně Zeťové (1 týden).</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Ženy, které strávily nejvíce týdnů na vrcholu české hitparády</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů jako #1</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Adele</td><td>24</td></tr><tr><td>2.</td><td>Nelly Furtado</td><td>24</td></tr><tr><td>3.</td><td>P!Nk</td><td>23</td></tr><tr><td>4.</td><td>Shakira</td><td>16</td></tr><tr><td>5.</td><td>Ava Max</td><td>12</td></tr><tr><td>6.</td><td>Katy Perry</td><td>12</td></tr><tr><td>7.</td><td>Alesha Dixon</td><td>11</td></tr><tr><td>8.</td><td>Rihanna</td><td>10</td></tr><tr><td>9.</td><td>Carly Rae Jepsen</td><td>8</td></tr><tr><td>10.</td><td>Lady Gaga</td><td>8</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=3>Z Češek se to od ledna 2006 do listopadu 2023 podařilo pouze Lenny (4 týdny), Ewě Farne (2 týdny) a Heleně Zeťové (1 týden).</td></tr></tfoot></table>'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "id": "8f1824c9",
    "metadata": {},
    "outputs": [],
@@ -505,23 +505,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "id": "68c4db57",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Češky, které se v top 100 držely nejvíce týdnů</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Anna K.</td><td>387</td></tr><tr><td>2.</td><td>Ewa Farna</td><td>303</td></tr><tr><td>3.</td><td>Lenny</td><td>285</td></tr><tr><td>4.</td><td>Lucie Vondráčková</td><td>228</td></tr><tr><td>5.</td><td>Lucie Bílá</td><td>221</td></tr><tr><td>6.</td><td>Aneta Langerová</td><td>197</td></tr><tr><td>7.</td><td>Olga Lounová</td><td>196</td></tr><tr><td>8.</td><td>Tereza Kerndlová</td><td>139</td></tr><tr><td>9.</td><td>Helena Zeťová</td><td>107</td></tr><tr><td>10.</td><td>Lenka Filipová</td><td>104</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=2>Data od ledna 2006 do listopadu 2023.</td></tr></tfoot></table>'"
+       "'<table class=\"dataframe table table--responsive table--w100p table--striped-red table--plain\"><caption>Češky, které se v top 100 držely nejvíce týdnů</caption><thead><tr style=\"text-align: right;\"><th class=\"text-nowrap\"></th><th class=\"text-nowrap\">Interpretka</th><th class=\"text-nowrap\">Týdnů v top 100</th></tr></thead><tbody class=\"text-sm\"><tr><td>1.</td><td>Anna K.</td><td>387</td></tr><tr><td>2.</td><td>Ewa Farna</td><td>303</td></tr><tr><td>3.</td><td>Lenny</td><td>285</td></tr><tr><td>4.</td><td>Lucie Vondráčková</td><td>228</td></tr><tr><td>5.</td><td>Lucie Bílá</td><td>221</td></tr><tr><td>6.</td><td>Aneta Langerová</td><td>197</td></tr><tr><td>7.</td><td>Olga Lounová</td><td>196</td></tr><tr><td>8.</td><td>Tereza Kerndlová</td><td>139</td></tr><tr><td>9.</td><td>Helena Zeťová</td><td>107</td></tr><tr><td>10.</td><td>Lenka Filipová</td><td>104</td></tr></tbody><tfoot><tr style=\"text-align: center;\"><td colspan=3>Data od ledna 2006 do listopadu 2023.</td></tr></tfoot></table>'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "tabulka(top10cesek, titulek=\"Češky, které se v top 100 držely nejvíce týdnů\", podtitulek=\"Data od ledna 2006 do listopadu 2023.\", poradi=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c04ca9b",
+   "metadata": {},
+   "source": [
+    "## Vs. stream (27. 11. 2023)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b489d9ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = pd.read_csv(os.path.join(\"data\",\"CZ_SINGLES_DIGITAL_TOP_100_tydenni.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8a6e9847",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stream = stream.merge(wikid, on=\"interpret_hlavni\", how=\"outer\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d66a3e4",
+   "metadata": {},
+   "source": [
+    "Kolik dat vlastně máme?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5c29494c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.869798602716712"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stream[~stream['velikost'].isnull()]) / len(stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0808e1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6704910979532464"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(stream[~stream['gender'].isnull()]) / len(stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e0c28e95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_roky = [x for x in roky if x >= 2014]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c82b21ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_podil_zen = pd.Series(stream[(stream['gender'] == 'žena')].groupby('rok').size() / stream[stream['gender'].isin(['žena','muž','genderfluid','nebinární'])].groupby('rok').size(), name=\"podíl žen\").reindex(s_roky)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "dd490841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_podil_muzu = pd.Series(stream[(stream['gender'] == 'muž')].groupby('rok').size() / stream[stream['gender'].isin(['žena','muž','genderfluid','nebinární'])].groupby('rok').size(), name=\"podíl žen\").reindex(s_roky)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "df4689e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_podil_ostatnich = pd.Series(stream[(stream['gender'].isin(['genderfluid','nebinární']))].groupby('rok').size() / stream[stream['gender'].isin(['žena','muž','genderfluid','nebinární'])].groupby('rok').size(), name=\"podíl genderfluid a nebinárních osob\").reindex(s_roky)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "f6bfe98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Graf uložen.\n"
+     ]
+    }
+   ],
+   "source": [
+    "graf(sloupcovy=[s_podil_ostatnich,s_podil_muzu,s_podil_zen], target=\"genderovy_podil_stream\", titulek='Podíl sólově vystupujících žen a mužů v žebříčku TOP 50 digitálních singlů', podtitulek=f'''Z {pocet_lidi} lidí v datech se jinak než jako žena či muž identifikují Miley Cyrus, Demi Lovato, Sam Smith a Lil Uzi Vert.''', kredity=[\"Zdroj dat: Česká národní skupina Mezinárodní federace hudebního průmyslu a Wikidata | Vizualizace: Michal Kašpárek, iROZHLAS.cz\",\"https://www.irozhlas.cz/zpravy-tag/datova-zurnalistika\"], procenta=[s_podil_ostatnich,s_podil_muzu,s_podil_zen], prvni=True, osay=' ', osay2=' ', skladany=True, naopak=False)"
    ]
   }
  ],
