--- a/062 ČRo spojení a čištění.ipynb
+++ b/062 ČRo spojení a čištění.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "a62db7b0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "eb15e931",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "be7390d2",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "e7cb103d",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "82394973",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "8cbef963",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "7d51f3ab",
    "metadata": {},
    "outputs": [
@@ -104,65 +104,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>stanice</th>\n",
        "      <th>since</th>\n",
        "      <th>id</th>\n",
        "      <th>interpret</th>\n",
        "      <th>interpret_id</th>\n",
        "      <th>track</th>\n",
        "      <th>track_id</th>\n",
-       "      <th>stanice</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>radiowave</td>\n",
        "      <td>2023-10-22T00:00:22+02:00</td>\n",
        "      <td>19376269.0</td>\n",
        "      <td>SYLVAN ESSO</td>\n",
        "      <td>11101.0</td>\n",
        "      <td>Frequency</td>\n",
        "      <td>82943.0</td>\n",
-       "      <td>radiowave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>radiowave</td>\n",
        "      <td>2023-10-22T00:03:12+02:00</td>\n",
        "      <td>19376274.0</td>\n",
        "      <td>WINONA OAK</td>\n",
        "      <td>25899.0</td>\n",
        "      <td>Winter Rain</td>\n",
        "      <td>87407.0</td>\n",
-       "      <td>radiowave</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>jazz</td>\n",
+       "      <td>2023-10-22T00:04:18+02:00</td>\n",
+       "      <td>19376275.0</td>\n",
+       "      <td>OMRI MOR</td>\n",
+       "      <td>15258.0</td>\n",
+       "      <td>Tears</td>\n",
+       "      <td>51319.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>radiowave</td>\n",
        "      <td>2023-10-22T00:07:28+02:00</td>\n",
        "      <td>19376280.0</td>\n",
        "      <td>DIIV</td>\n",
        "      <td>2909.0</td>\n",
        "      <td>Skin Game</td>\n",
        "      <td>69599.0</td>\n",
-       "      <td>radiowave</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2023-10-22T00:10:40+02:00</td>\n",
-       "      <td>19376285.0</td>\n",
-       "      <td>ROBBIE WILLIAMS</td>\n",
-       "      <td>2984.0</td>\n",
-       "      <td>ROAD TO MANDALAY</td>\n",
-       "      <td>7475.0</td>\n",
-       "      <td>radiozurnal</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023-10-22T00:11:24+02:00</td>\n",
-       "      <td>19376286.0</td>\n",
-       "      <td>DUA LIPA</td>\n",
-       "      <td>11139.0</td>\n",
-       "      <td>DANCE THE NIGHT</td>\n",
-       "      <td>108512.0</td>\n",
-       "      <td>dvojka</td>\n",
+       "      <td>jazz</td>\n",
+       "      <td>2023-10-22T00:09:38+02:00</td>\n",
+       "      <td>19376283.0</td>\n",
+       "      <td>ALFREDO RODRIGUEZ &amp; PEDRITO MARTINEZ</td>\n",
+       "      <td>19128.0</td>\n",
+       "      <td>Estamos Llegando</td>\n",
+       "      <td>63167.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -175,91 +175,104 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>219417</th>\n",
-       "      <td>2024-08-27T23:53:31+02:00</td>\n",
-       "      <td>20843091.0</td>\n",
-       "      <td>JESSIE J</td>\n",
-       "      <td>9523.0</td>\n",
-       "      <td>I Want Love</td>\n",
-       "      <td>91200.0</td>\n",
+       "      <th>476424</th>\n",
+       "      <td>jazz</td>\n",
+       "      <td>2024-12-19T23:53:24+01:00</td>\n",
+       "      <td>21399720.0</td>\n",
+       "      <td>The Three Sounds Featuring Gene Harris</td>\n",
+       "      <td>18434.0</td>\n",
+       "      <td>The Night Has a Thousand Eyes</td>\n",
+       "      <td>60972.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476425</th>\n",
        "      <td>radiowave</td>\n",
+       "      <td>2024-12-19T23:55:59+01:00</td>\n",
+       "      <td>21399723.0</td>\n",
+       "      <td>JESSY LANZA</td>\n",
+       "      <td>10188.0</td>\n",
+       "      <td>Lick in Heaven</td>\n",
+       "      <td>77079.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>219418</th>\n",
-       "      <td>2024-08-27T23:53:35+02:00</td>\n",
-       "      <td>20843092.0</td>\n",
-       "      <td>OASIS</td>\n",
-       "      <td>6426.0</td>\n",
-       "      <td>WHATEVER</td>\n",
-       "      <td>56027.0</td>\n",
-       "      <td>dvojka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219419</th>\n",
-       "      <td>2024-08-27T23:56:46+02:00</td>\n",
-       "      <td>20843099.0</td>\n",
-       "      <td>U.S. GIRLS</td>\n",
-       "      <td>9345.0</td>\n",
-       "      <td>So Typically Now</td>\n",
-       "      <td>102167.0</td>\n",
-       "      <td>radiowave</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219420</th>\n",
-       "      <td>2024-08-27T23:57:04+02:00</td>\n",
-       "      <td>20843101.0</td>\n",
-       "      <td>PICTURE THIS</td>\n",
-       "      <td>31599.0</td>\n",
-       "      <td>GET ON MY LOVE</td>\n",
-       "      <td>105566.0</td>\n",
+       "      <th>476426</th>\n",
        "      <td>radiozurnal</td>\n",
+       "      <td>2024-12-19T23:56:26+01:00</td>\n",
+       "      <td>21399724.0</td>\n",
+       "      <td>CHINASKI</td>\n",
+       "      <td>2987.0</td>\n",
+       "      <td>SLYŠÍM TVOJE KROKY</td>\n",
+       "      <td>118401.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>219421</th>\n",
-       "      <td>2024-08-27T23:58:47+02:00</td>\n",
-       "      <td>20843103.0</td>\n",
+       "      <th>476427</th>\n",
+       "      <td>dvojka</td>\n",
+       "      <td>2024-12-19T23:58:43+01:00</td>\n",
+       "      <td>21399730.0</td>\n",
        "      <td>STUDIOVÝ ORCHESTR</td>\n",
        "      <td>4144.0</td>\n",
        "      <td>ČESKÁ STÁTNÍ HYMNA</td>\n",
        "      <td>13826.0</td>\n",
-       "      <td>dvojka</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>476428</th>\n",
+       "      <td>jazz</td>\n",
+       "      <td>2024-12-19T23:59:19+01:00</td>\n",
+       "      <td>21399732.0</td>\n",
+       "      <td>SNARKY PUPPY</td>\n",
+       "      <td>10404.0</td>\n",
+       "      <td>I Asked</td>\n",
+       "      <td>34372.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>219422 rows × 7 columns</p>\n",
+       "<p>476429 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            since          id          interpret  \\\n",
-       "0       2023-10-22T00:00:22+02:00  19376269.0        SYLVAN ESSO   \n",
-       "1       2023-10-22T00:03:12+02:00  19376274.0         WINONA OAK   \n",
-       "2       2023-10-22T00:07:28+02:00  19376280.0               DIIV   \n",
-       "3       2023-10-22T00:10:40+02:00  19376285.0    ROBBIE WILLIAMS   \n",
-       "4       2023-10-22T00:11:24+02:00  19376286.0           DUA LIPA   \n",
-       "...                           ...         ...                ...   \n",
-       "219417  2024-08-27T23:53:31+02:00  20843091.0           JESSIE J   \n",
-       "219418  2024-08-27T23:53:35+02:00  20843092.0              OASIS   \n",
-       "219419  2024-08-27T23:56:46+02:00  20843099.0         U.S. GIRLS   \n",
-       "219420  2024-08-27T23:57:04+02:00  20843101.0       PICTURE THIS   \n",
-       "219421  2024-08-27T23:58:47+02:00  20843103.0  STUDIOVÝ ORCHESTR   \n",
+       "            stanice                      since          id  \\\n",
+       "0         radiowave  2023-10-22T00:00:22+02:00  19376269.0   \n",
+       "1         radiowave  2023-10-22T00:03:12+02:00  19376274.0   \n",
+       "2              jazz  2023-10-22T00:04:18+02:00  19376275.0   \n",
+       "3         radiowave  2023-10-22T00:07:28+02:00  19376280.0   \n",
+       "4              jazz  2023-10-22T00:09:38+02:00  19376283.0   \n",
+       "...             ...                        ...         ...   \n",
+       "476424         jazz  2024-12-19T23:53:24+01:00  21399720.0   \n",
+       "476425    radiowave  2024-12-19T23:55:59+01:00  21399723.0   \n",
+       "476426  radiozurnal  2024-12-19T23:56:26+01:00  21399724.0   \n",
+       "476427       dvojka  2024-12-19T23:58:43+01:00  21399730.0   \n",
+       "476428         jazz  2024-12-19T23:59:19+01:00  21399732.0   \n",
        "\n",
-       "        interpret_id               track  track_id      stanice  \n",
-       "0            11101.0           Frequency   82943.0    radiowave  \n",
-       "1            25899.0         Winter Rain   87407.0    radiowave  \n",
-       "2             2909.0           Skin Game   69599.0    radiowave  \n",
-       "3             2984.0    ROAD TO MANDALAY    7475.0  radiozurnal  \n",
-       "4            11139.0     DANCE THE NIGHT  108512.0       dvojka  \n",
-       "...              ...                 ...       ...          ...  \n",
-       "219417        9523.0         I Want Love   91200.0    radiowave  \n",
-       "219418        6426.0            WHATEVER   56027.0       dvojka  \n",
-       "219419        9345.0    So Typically Now  102167.0    radiowave  \n",
-       "219420       31599.0      GET ON MY LOVE  105566.0  radiozurnal  \n",
-       "219421        4144.0  ČESKÁ STÁTNÍ HYMNA   13826.0       dvojka  \n",
+       "                                     interpret  interpret_id  \\\n",
+       "0                                  SYLVAN ESSO       11101.0   \n",
+       "1                                   WINONA OAK       25899.0   \n",
+       "2                                     OMRI MOR       15258.0   \n",
+       "3                                         DIIV        2909.0   \n",
+       "4         ALFREDO RODRIGUEZ & PEDRITO MARTINEZ       19128.0   \n",
+       "...                                        ...           ...   \n",
+       "476424  The Three Sounds Featuring Gene Harris       18434.0   \n",
+       "476425                             JESSY LANZA       10188.0   \n",
+       "476426                                CHINASKI        2987.0   \n",
+       "476427                       STUDIOVÝ ORCHESTR        4144.0   \n",
+       "476428                            SNARKY PUPPY       10404.0   \n",
        "\n",
-       "[219422 rows x 7 columns]"
+       "                                track  track_id  \n",
+       "0                           Frequency   82943.0  \n",
+       "1                         Winter Rain   87407.0  \n",
+       "2                               Tears   51319.0  \n",
+       "3                           Skin Game   69599.0  \n",
+       "4                    Estamos Llegando   63167.0  \n",
+       "...                               ...       ...  \n",
+       "476424  The Night Has a Thousand Eyes   60972.0  \n",
+       "476425                 Lick in Heaven   77079.0  \n",
+       "476426             SLYŠÍM TVOJE KROKY  118401.0  \n",
+       "476427             ČESKÁ STÁTNÍ HYMNA   13826.0  \n",
+       "476428                        I Asked   34372.0  \n",
+       "\n",
+       "[476429 rows x 7 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "3338189e",
    "metadata": {},
    "outputs": [],
@@ -295,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
